# ecoroute-env

./: Dockerfile  README.md  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  models.py
