[project]
name = "ecoroute-env"
version = "2.0.0"
description = "EcoRoute: AI delivery route optimization environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"